super-linter.yml: Remove redundant environment variable
No need to set DEFAULT_BRANCH here now that it is in the environment
file.

Change-Id: I85143620c9cf76bb12022751f4d74648a8b86212
Signed-off-by: Joakim Roubert <joakimr@axis.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ on: push
 
 jobs:
   build_acap:
-    name: Build ACAPs
+    name: Build ACAP packages
     runs-on: ubuntu-latest
     env:
       DEBIAN_FRONTEND: noninteractive
