--- a/manifest.json
+++ b/manifest.json
@@ -1,24 +1,20 @@
 {
-    "schemaVersion": "1.3",
+    "schemaVersion": "1.7.3",
     "acapPackageConf": {
         "setup": {
             "friendlyName": "OPC UA Color Checker",
             "appName": "opcuacolorchecker",
             "vendor": "Axis Communications AB",
             "embeddedSdkVersion": "3.0",
-            "user": {
-                "username": "sdk",
-                "group": "sdk"
-            },
             "vendorUrl": "https://www.axis.com/",
             "runMode": "respawn",
-            "version": "1.1.3"
+            "version": "2.0.0"
         },
         "configuration": {
             "settingPage": "settings.html",
             "httpConfig": [
-                {"type": "transferCgi", "name": "getstatus.cgi", "access": "viewer"},
-                {"type": "transferCgi", "name": "pickcurrent.cgi", "access": "admin"}
+                {"type": "fastCgi", "name": "getstatus.cgi", "access": "viewer"},
+                {"type": "fastCgi", "name": "pickcurrent.cgi", "access": "admin"}
             ],
             "paramConfig": [
                 {"name": "CenterX", "type": "int:min=0,max=959", "default": "100"},
